--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.6.3",
+    "@clerk/themes": "^2.1.33",
     "@floating-ui/react-dom": "^2.1.2",
-    "@lexical/react": "^0.16.0",
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.8.0",
+    "@liveblocks/react": "^2.8.0",
+    "@liveblocks/react-lexical": "^2.8.0",
+    "@liveblocks/react-ui": "^2.8.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fs-extra": "^11.2.0",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "react": "^18.3.1",
