--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^5.6.3",
     "@clerk/themes": "^2.1.33",
     "@floating-ui/react-dom": "^2.1.2",
-    "@lexical/react": "^0.18.0",
+    "@lexical/react": "^0.16.1",
     "@liveblocks/client": "^2.8.0",
     "@liveblocks/node": "^2.8.0",
     "@liveblocks/react": "^2.8.0",
@@ -21,8 +21,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "fs-extra": "^11.2.0",
-    "lexical": "^0.18.0",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.446.0",
     "nanoid": "^5.0.7",
     "next": "14.2.13",
@@ -36,8 +39,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18.3.0",
-    "eslint": "^9",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "^14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.13",
     "typescript": "^5"
